# image-search

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  firebase.json  pyproject.toml
.github/: pull_request_template.md
.kiro/steering/: product.md  structure.md  tech.md
config/: met_museum_tags_filtered.json  motif_jp_map.json  reindex_samples.json
docs/: plan.md  research.md
docs/runbooks/: reindex.md
services/embedding/: __init__.py  app.py  encoder.py
services/ingestion/: Dockerfile  batch.py  color_extractor.py  firebase_storage.py  image_preprocessor.py  pipeline.py  reindex.py  run.py
shared/: config.py
tests/: test_alias_admin.py  test_api_client_js.py  test_app_js.py  test_batch_runner.py  test_collection_resolver.py  test_color_extractor.py  test_config.py  test_docker_compose.py  test_e2e.py  test_embedding_client.py  test_embedding_service.py  test_firebase_emulator.py  test_firebase_storage.py  test_image_preprocessor.py  test_index_endpoint.py  test_ingestion_pipeline.py  test_integration.py  test_models.py  test_qdrant_factory.py  test_qdrant_repository.py  test_query_info_js.py  test_query_parser.py  test_reindex_catchup.py  test_reindex_cli.py  test_reindex_e2e.py  test_reindex_orchestrator.py  test_reindex_samples.py  test_reranker.py  test_result_card_js.py  test_result_grid_js.py  test_search_app.py  test_search_form_js.py  test_search_lifespan.py  test_search_service.py  test_spa_structure.py  test_static_files.py  test_structured_logger.py  test_taxonomy_mapper.py  test_unit_additional.py  test_validation_gate.py  (+1 more)
(+53 files in other folders)
